--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1 style="font-family: fantasy;">HAPPY </h1>
-        <h1>EASTER SUNDAY GSAP!</h1>
+        <h1>EASTER SUNDAY</h1>
     </header>
     <div class="flex-wrap">
         <div class="box pink">Thanks Jesus!</div>
