commit new easter message

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
+
     <header>
-        <h1 style="font-family: fantasy;">HAPPY </h1>
-        <h1>EASTER SUNDAY</h1>
+        <h1 style="font-family: fantasy;"> April 4, 2021</h1>
+        <h1>HAPPY EASTER SUNDAY</h1>
     </header>
     <div class="flex-wrap">
         <div class="box pink">Thanks Jesus!</div>
